--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -178,6 +178,11 @@ input:-webkit-autofill:focus {
     --tw-prose-quote-borders: theme('colors.gray.400') !important;
     --tw-prose-hr: theme('colors.gray.300') !important;
   }
+  .dark .prose {
+    --tw-prose-quotes: theme('colors.gray.300') !important;
+    --tw-prose-quote-borders: theme('colors.gray.500') !important;
+    --tw-prose-hr: theme('colors.gray.600') !important;
+  }
 
   .prose :where(h1, h2, h3, h4, h5, h6) {
     @apply pl-3;
